--- a/app/src/main/res/layout/view_pod_empty.xml
+++ b/app/src/main/res/layout/view_pod_empty.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.waewaee.ww_custom_view_components.veiws.viewpods.EmptyViewPod xmlns:android="http://schemas.android.com/apk/res/android"
+<com.waewaee.ww_custom_view_components.veiws.viewpods.EmptyViewPod
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,5 +18,14 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnTryAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Try Again"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/tvEmpty"
+        android:layout_marginTop="@dimen/margin_medium"/>
 
 </com.waewaee.ww_custom_view_components.veiws.viewpods.EmptyViewPod>
