- add custom attribute to RoundedImageView

--- a/app/src/main/res/layout/activity_modify_custom_view.xml
+++ b/app/src/main/res/layout/activity_modify_custom_view.xml
@@ -16,6 +16,7 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
+            app:cornerRadius="16dp"
             app:srcCompat="@drawable/news_sample"/>
 
     </LinearLayout>
