- PrefixCustomEditText ( Modify Custom View)

--- a/app/src/main/res/layout/activity_modify_custom_view.xml
+++ b/app/src/main/res/layout/activity_modify_custom_view.xml
@@ -19,6 +19,12 @@
             app:cornerRadius="16dp"
             app:srcCompat="@drawable/news_sample"/>
 
+        <com.waewaee.ww_custom_view_components.veiws.components.PrefixCustomEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_xxlarge"
+            android:inputType="number" />
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
